# cardquest-server

./: .gitignore  Cargo.toml  README.md  schemas.sql
questions/: category2.json  test1.json
src/: main.rs  tg.rs
src/common/: mod.rs  models.rs  questions.rs
src/server/: handlers.rs  mod.rs  models.rs
src/tg/: mod.rs  register.rs
